# coralmind

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: README.md
examples/: 01_basic_summary.py  02_multi_material_analysis.py  03_custom_strategy.py  04_code_review.py  05_planner_prompt_test.py  06_script_outline.py  README.md
src/coralmind/: __init__.py  agent.py  exceptions.py  llm.py  output_format.py  requirements_finder.py  worker.py
src/coralmind/model/: __init__.py  plan.py  requirement_tree.py  task.py  task_template.py
src/coralmind/prompts/: __init__.py  evaluation_standard.py  name.py  plan_standard.py
src/coralmind/prompts/cn/: evaluation_standard.py  func.py  plan_standard.py  static.py  template.py
src/coralmind/prompts/en/: func.py  static.py  template.py
src/coralmind/storage/: __init__.py  connection.py  plan.py  requirement_tree.py  task_template.py
src/coralmind/strategy/advising/: base.py  threshold.py
src/coralmind/strategy/evaluating/: __init__.py
tests/: fake_llm.py  plan_example.py  task_example.py  test_agent.py  test_llm.py  test_output_format.py  test_plan.py  test_requirements_finder.py  test_storage.py  test_strategy.py  test_worker.py
